k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securesupply
  namespace: securesupply
spec:
  selector:
    app.kubernetes.io/name: securesupply
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
